<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="48dp"
    tools:context=".ui.feed.StudyApplyActivity">

    <ImageView
        android:id="@+id/studyBackgroundImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/img_study_background_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="56dp"
        android:src="@drawable/ic_arrow_back"
        android:tint="@color/WHITE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseAppTint" />

    <ImageView
        android:id="@+id/settingBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="56dp"
        android:layout_marginRight="22dp"
        android:src="@drawable/ic_setting"
        android:tint="@color/WHITE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseAppTint" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/studyBackgroundImg"
        tools:layout_editor_absoluteX="24dp">

        <TextView
            android:id="@+id/studyName"
            style="@style/B1_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/study_name"
            android:textColor="@color/GS_800"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="3dp"
            android:src="@drawable/ic_feed_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/studyDetail"
            style="@style/B6_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/feed_explanation"
            android:textColor="@color/GS_700"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/studyName" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tagList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/studyDetail" />

        <LinearLayout
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="30dp"
            android:background="#F8F8F8"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tagList" />

        <LinearLayout
            android:id="@+id/IsStudyOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider1">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_lock" />

            <TextView
                style="@style/B6_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/study_lock"
                android:textColor="@color/GS_600" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/studyGithubLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/IsStudyOpen">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_study_github_link" />

            <TextView
                style="@style/B6_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/study_github_link"
                android:textColor="@color/GS_600" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/studyRule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/studyGithubLink">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_attendance" />

            <TextView
                style="@style/B6_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feed_rule"
                android:textColor="@color/GS_600" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/studyRule" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="31dp"
            android:text="@string/feed_member_number"
            app:layout_constraintStart_toEndOf="@+id/recyclerView"
            app:layout_constraintTop_toBottomOf="@id/studyRule" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/studyEnterBtn"
        style="@style/B5_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:background="@drawable/box_non_stroke_r12_green"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:layout_marginRight="22dp"
        android:layout_marginLeft="22dp"
        android:text="스터디 신청하기"
        android:textColor="@color/BLACK"
        app:layout_constraintBottom_toTopOf="@+id/studyLinkCopyBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/studyLinkCopyBtn"
        style="@style/B5_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box_non_stroke_r12"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:text="스터디 링크 복사하기"
        android:textColor="@color/BLACK"
        android:layout_marginRight="22dp"
        android:layout_marginLeft="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>