<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="550dp"
    android:layout_gravity="bottom"
    android:layout_marginBottom="-20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.mystudy.MemberProfileFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="50dp"
        app:cardCornerRadius="16dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginBottom="51dp"
            android:layout_marginTop="32dp">

            <TextView
                android:id="@+id/memberProfileTitle"
                style="@style/B2_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="프로필"
                android:textColor="@color/GS_800"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/exitBtn"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:gravity="end"
                android:src="@drawable/ic_exit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                app:layout_constraintTop_toBottomOf="@+id/memberProfileTitle">

                <LinearLayout
                    android:id="@+id/profileTitleLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/profileImg"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginRight="16dp"
                        android:background="@drawable/circle_non_stroke"
                        android:padding="7dp"
                        android:src="@drawable/ic_navi_profile_active" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/nickname"
                            style="@style/B1_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:text="@string/nickname"
                            android:textColor="@color/BLACK"
                            android:textSize="26sp" />

                        <TextView
                            android:id="@+id/githubId"
                            style="@style/B6_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/github_id"
                            android:textColor="@color/GS_400" />
                    </LinearLayout>
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="18dp"
                    android:paddingTop="18dp"
                    android:background="@drawable/box_non_stroke_r8"
                    android:backgroundTint="#F7FAFC"
                    tools:ignore="UseAppTint">

                    <ImageView
                        android:id="@+id/githubImg"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/logo_github"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/B6_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="깃허브"
                        android:layout_marginLeft="8dp"
                        android:textColor="@color/GS_600"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/githubImg"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/githubLink"
                        style="@style/B6_2"
                        android:layout_marginRight="6dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_github_link"
                        android:textColor="#7A808D"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/githubLinkBtn"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/githubLinkBtn"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_link"
                        android:tint="#7A808D"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="18dp"
                    android:paddingTop="18dp"
                    android:background="@drawable/box_non_stroke_r8"
                    android:backgroundTint="#F7FAFC"
                    tools:ignore="UseAppTint">

                    <ImageView
                        android:id="@+id/blogImg"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/logo_blog"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/B6_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="블로그"
                        android:layout_marginLeft="8dp"
                        android:textColor="@color/GS_600"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/blogImg"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/blogLink"
                        style="@style/B6_2"
                        android:layout_marginRight="6dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_blog_link"
                        android:textColor="#7A808D"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/blogLinkBtn"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/blogLinkBtn"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_link"
                        android:tint="#7A808D"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="18dp"
                    android:paddingTop="18dp"
                    android:background="@drawable/box_non_stroke_r8"
                    android:backgroundTint="#F7FAFC"
                    tools:ignore="UseAppTint">

                    <ImageView
                        android:id="@+id/linkedinImg"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/logo_linkedin"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/B6_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="링크드인"
                        android:layout_marginLeft="8dp"
                        android:textColor="@color/GS_600"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/linkedinImg"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/linkedinLink"
                        style="@style/B6_2"
                        android:layout_marginRight="6dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_github_link"
                        android:textColor="#7A808D"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/linkedinLinkBtn"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/linkedinLinkBtn"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_link"
                        android:tint="#7A808D"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="18dp"
                    android:paddingTop="18dp"
                    android:background="@drawable/box_non_stroke_r8"
                    android:backgroundTint="#F7FAFC"
                    tools:ignore="UseAppTint">

                    <ImageView
                        android:id="@+id/memberCommitImg"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_commit_study_600"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView7"
                        style="@style/B6_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="커밋 기록"
                        android:textColor="@color/GS_600"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/memberCommitImg"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:layout_width="74dp"
                        android:layout_height="30dp"
                        android:background="@drawable/box_non_stroke_r6_green"
                        android:gravity="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            style="@style/B7_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="보러가기"
                            android:textColor="@color/BLACK" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>